front: refactorisation des traductions pour utiliser $t. + fix langue par défaut

--- a/front/public/langs/en.json
+++ b/front/public/langs/en.json
@@ -4,12 +4,8 @@
     "map": "Map",
     "fav": "Favorites",
     "me": "Me",
-    "yesterday": "Yesterday",
-    "past": "Past",
-    "today": "Today",
-    "tomorrow": "Tomorrow",
-    "next": " next",
-    "thedate": "The ",
+
+    "categories": "Categories",
     "party": "Party",
     "arts": "Arts",
     "theater": "Theater",
@@ -46,68 +42,56 @@
     "seminar": "Seminar",
     "videogame": "Video game",
     "boardgame": "Board game",
-    "copied": "Copied!",
-    "organizeit": "Organize it!",
-    "noresults": "You don't find the event of your dreams?",
-    "notloggedin": "You are not logged in",
+
     "login": "Log in",
-    "logintofav": "Log in to save your favorites events",
+    "not_logged_in": "You are not logged in",
+    "login_with": "Log in with",
+    "logging_in": "Logging in...",
+    "logged_in": "Logged in !",
+    "logging_in_failed": "Connection failed",
+    "retry": "Retry",
+    "ok": "OK",
+    "login_to_fav": "Log in to save your favorites events",
     "invalid": "Invalid username or password",
     "logout": "Log out",
-    "nofavorites": "You don't have any favorite events yet",
-    "searchthem": "Search for them",
+    
+    "copied": "Copied!",
+    "organize_it": "Organize it!",
+    "no_results": "You don't find the event of your dreams?",
+    "no_favorites": "You don't have any favorite events yet",
+    "search_them": "Search for them",
     "add_fav": "Add to favorites",
     "remove_fav": "Remove from favorites",
     "show_on_map": "Show on map",
     "open_map_app": "Open in map app",
-    "fromtoday": "From today",
-    "alldate": "Any day",
+    "more_info": "More info",
+
+    "search_events": "Search events...",
+    "eg": "e.g.",
+    "from_today": "From today",
+    "all_date": "Any day",
     "week": "This week",
     "month": "This month",
-    "alltime": "Any time",
+    "all_time": "Any time",
     "now": "Now",
     "morning": "The morning",
     "afternoon": "The afternoon",
     "evening": "The evening",
     "night": "The night",
-    "categories": "Categories",
-    "searchevents": "Search events...",
-    "moreinfo": "More info",
-    "language": "Language",
-    "navigatorlanguage": "Navigator language",
+    "sort_by_date": "Sort by date",
+    "sort_by_relevance": "Sort by relevance",
+    "sort_by_popularity": "Sort by popularity",
+    "sort_by_distance": "Sort by distance",
+
+    "yesterday": "Yesterday",
+    "past": "Past",
+    "today": "Today",
+    "tomorrow": "Tomorrow",
+    "next": " next",
+    "the_date": "The ",
     "at": "at",
     "from": "from",
     "to": "to",
-    "weather": "Weather",
-    "clear-sky": "Clear sky",
-    "mainly-clear": "Mainly clear",
-    "partly-cloudy": "Partly cloudy",
-    "overcast": "Overcast",
-    "fog": "Fog",
-    "depositing-rime-fog": "Depositing rime fog",
-    "light-drizzle": "Light drizzle",
-    "moderate-drizzle": "Moderate drizzle",
-    "dense-drizzle": "Dense drizzle",
-    "light-freezin": "Light freezing drizzle",
-    "dense freezin": "Dense freezing drizzle",
-    "slight-rain": "Slight rain",
-    "moderate-rain": "Moderate rain",
-    "heavy-rain": "Heavy rain",
-    "light-freezing rain": "Light freezing rain",
-    "heavy-freezing rain": "Heavy freezing rain",
-    "slight-snowfall": "Slight snowfall",
-    "moderate-snowfall": "Moderate snowfall",
-    "heavy-snowfall": "Heavy snowfall",
-    "snow-grains": "Snow grains",
-    "slight-rain-showers": "Slight rain showers",
-    "moderate-rain-showers": "Moderate rain showers",
-    "violent-rain-showers": "Violent rain showers",
-    "slight-snow-showers": "Slight snow showers",
-    "heavy-snow-showers": "Heavy snow showers",
-    "thunderstorm": "Thunderstorm",
-    "thunderstorm-with-slight-hail": "Thunderstorm with slight hail",
-    "thunderstorm-with-heavy-hail": "Thunderstorm with heavy hail",
-    "unknown": "Unknown",
     "status": [
         "Unknown",
         "Programmed",
@@ -120,19 +104,42 @@
     "by": "by",
     "contact": "Contact",
     "registration": "Registration",
-    "sortbydate": "Sort by date",
-    "sortbyrelevance": "Sort by relevance",
-    "sortbypopularity": "Sort by popularity",
-    "sortbydistance": "Sort by distance",
-    "loginwith": "Log in with",
-    "loggingin": "Logging in...",
-    "loggedin": "Logged in !",
-    "logginginfailed": "Connection failed",
-    "retry": "Retry",
-    "ok": "OK",
-    "non representative": "Non representative image",
+    "non_representative": "Non representative image",
+
+    "weather": "Weather",
+    "clear_sky": "Clear sky",
+    "mainly_clear": "Mainly clear",
+    "partly_cloudy": "Partly cloudy",
+    "overcast": "Overcast",
+    "fog": "Fog",
+    "depositing_rime_fog": "Depositing rime fog",
+    "light_drizzle": "Light drizzle",
+    "moderate_drizzle": "Moderate drizzle",
+    "dense_drizzle": "Dense drizzle",
+    "light_freezin": "Light freezing drizzle",
+    "dense_freezin": "Dense freezing drizzle",
+    "slight_rain": "Slight rain",
+    "moderate_rain": "Moderate rain",
+    "heavy_rain": "Heavy rain",
+    "light_freezing_rain": "Light freezing rain",
+    "heavy_freezing_rain": "Heavy freezing rain",
+    "slight_snowfall": "Slight snowfall",
+    "moderate_snowfall": "Moderate snowfall",
+    "heavy_snowfall": "Heavy snowfall",
+    "snow_grains": "Snow grains",
+    "slight_rain_showers": "Slight rain showers",
+    "moderate_rain_showers": "Moderate rain showers",
+    "violent_rain_showers": "Violent rain showers",
+    "slight_snow_showers": "Slight snow showers",
+    "heavy_snow_showers": "Heavy snow showers",
+    "thunderstorm": "Thunderstorm",
+    "thunderstorm_with_slight_hail": "Thunderstorm with slight hail",
+    "thunderstorm_with_heavy_hail": "Thunderstorm with heavy hail",
+    "unknown": "Unknown",
+
+    "language": "Language",
+    "navigator_language": "Navigator language",
     "install_app": "Install the app",
-    "eg": "e.g.",
     "about": "About",
     "about_text": [
         "What to do tonight? Where to go this weekend? What events are organized near me?",
