--- a/front/public/langs/fr.json
+++ b/front/public/langs/fr.json
@@ -4,12 +4,9 @@
     "map": "Carte",
     "fav": "Favoris",
     "me": "Moi",
-    "yesterday": "Hier",
-    "past": "Passé",
-    "today": "Aujourd'hui",
-    "tomorrow": "Demain",
-    "next": " prochain",
-    "thedate": "Le ",
+
+    "categories": "Catégories",
+    "eg": "ex.",
     "party": "Fête",
     "arts": "Arts",
     "theater": "Théâtre",
@@ -38,7 +35,7 @@
     "garden": "Jardin",
     "holiday": "Vacances",
     "free": "Gratuit",
-    "parade": "Parade",
+    "parade": "Défilé",
     "fair": "Foire",
     "religion": "Religion",
     "science": "Science",
@@ -46,68 +43,55 @@
     "seminar": "Séminaire",
     "videogame": "Jeu vidéo",
     "boardgame": "Jeu de société",
-    "copied": "Copié !",
-    "organizeit": "Organise-le !",
-    "noresults": "Tu ne trouves pas l'évent de tes rêves ?",
+
     "login": "Se connecter",
-    "logintofav": "Connecte-toi pour enregister tes événements préférés",
+    "not_logged_in": "Tu n'es pas connecté",
+    "login_with": "Se connecter avec",
+    "logging_in": "Connexion...",
+    "logged_in": "Connecté !",
+    "logging_in_failed": "Échec de la connexion",
+    "retry": "Réessayer",
+    "ok": "OK",
+    "login_to_fav": "Connecte-toi pour enregister tes événements préférés",
     "invalid": "Nom d'utilisateur ou mot de passe invalide",
     "logout": "Se déconnecter",
-    "nofavorites": "Tu n'as pas encore d'événements favoris",
-    "searchthem": "Recherches-en !",
-    "notloggedin": "Tu n'es pas connecté",
+
+    "copied": "Copié !",
+    "organize_it": "Organise-le !",
+    "no_results": "Tu ne trouves pas l'évent de tes rêves ?",
+    "no_favorites": "Tu n'as pas encore d'événements favoris",
+    "search_them": "Recherches-en !",
     "add_fav": "Ajouter à mes favoris",
     "remove_fav": "Retirer de mes favoris",
     "show_on_map": "Afficher sur la carte",
     "open_map_app": "Ouvrir sur l'appli de carte",
-    "fromtoday": "À venir",
-    "alldate": "Toute période",
+    "more_info": "Plus d'infos",
+
+    "search_events": "Rechercher des évents...",
+    "from_today": "À venir",
+    "all_date": "Toute période",
     "week": "Cette semaine",
     "month": "Ce mois-ci",
-    "alltime": "N'importe quand",
+    "all_time": "N'importe quand",
     "now": "Maintenant",
     "morning": "Le matin",
     "afternoon": "L'après-midi",
     "evening": "En soirée",
     "night": "La nuit",
-    "categories": "Catégories",
-    "searchevents": "Rechercher des évents...",
-    "moreinfo": "Plus d'infos",
-    "language": "Langue",
-    "navigatorlanguage": "Langue du navigateur",
+    "sort_by_date": "Trier par date",
+    "sort_by_relevance": "Trier par pertinence",
+    "sort_by_popularity": "Trier par popularité",
+    "sort_by_distance": "Trier par distance",
+
+    "yesterday": "Hier",
+    "past": "Passé",
+    "today": "Aujourd'hui",
+    "tomorrow": "Demain",
+    "next": " prochain",
+    "the_date": "Le ",
     "at": "à",
     "from": "de",
     "to": "à",
-    "weather": "Météo",
-    "clear-sky": "Ciel clair",
-    "mainly-clear": "Majoritairement clair",
-    "partly-cloudy": "Partiellement nuageux",
-    "overcast": "Couvert",
-    "fog": "Brouillard",
-    "depositing-rime-fog": "Brouillard givrant",
-    "light-drizzle": "Légère bruine",
-    "moderate-drizzle": "Bruine modérée",
-    "dense-drizzle": "Bruine dense",
-    "light-freezin": "Légère bruine verglaçante",
-    "dense freezin": "Bruine verglaçante dense",
-    "slight-rain": "Légère pluie",
-    "moderate-rain": "Pluie modérée",
-    "heavy-rain": "Forte pluie",
-    "light-freezing rain": "Légère pluie verglaçante",
-    "heavy-freezing rain": "Pluie verglaçante forte",
-    "slight-snowfall": "Légère chute de neige",
-    "moderate-snowfall": "Chute de neige modérée",
-    "heavy-snowfall": "Forte chute de neige",
-    "snow-grains": "Grains de neige",
-    "slight-rain-showers": "Légères averses",
-    "moderate-rain-showers": "Averses modérées",
-    "violent-rain-showers": "Averses violentes",
-    "slight-snow-showers": "Légères averses de neige",
-    "heavy-snow-showers": "Averses de neige fortes",
-    "thunderstorm": "Orage",
-    "thunderstorm-with-slight-hail": "Orage avec légères chutes de grêle",
-    "thunderstorm-with-heavy-hail": "Orage avec fortes chutes de grêle",
-    "unknown": "Inconnue",
     "status": [
         "Inconnu",
         "Programmé",
@@ -120,19 +104,42 @@
     "by": "par",
     "contact": "Contact",
     "registration": "Inscription",
-    "sortbydate": "Trier par date",
-    "sortbyrelevance": "Trier par pertinence",
-    "sortbypopularity": "Trier par popularité",
-    "sortbydistance": "Trier par distance",
-    "loginwith": "Se connecter avec",
-    "loggingin": "Connexion...",
-    "loggedin": "Connecté !",
-    "logginginfailed": "Échec de la connexion",
-    "retry": "Réessayer",
-    "ok": "OK",
-    "non representative": "Image non représentative",
+    "non_representative": "Image non représentative",
+
+    "weather": "Météo",
+    "clear_sky": "Ciel clair",
+    "mainly_clear": "Majoritairement clair",
+    "partly_cloudy": "Partiellement nuageux",
+    "overcast": "Couvert",
+    "fog": "Brouillard",
+    "depositing_rime_fog": "Brouillard givrant",
+    "light_drizzle": "Légère bruine",
+    "moderate_drizzle": "Bruine modérée",
+    "dense_drizzle": "Bruine dense",
+    "light_freezin": "Légère bruine verglaçante",
+    "dense_freezin": "Bruine verglaçante dense",
+    "slight_rain": "Légère pluie",
+    "moderate_rain": "Pluie modérée",
+    "heavy_rain": "Forte pluie",
+    "light_freezing_rain": "Légère pluie verglaçante",
+    "heavy_freezing_rain": "Pluie verglaçante forte",
+    "slight_snowfall": "Légère chute de neige",
+    "moderate_snowfall": "Chute de neige modérée",
+    "heavy_snowfall": "Forte chute de neige",
+    "snow_grains": "Grains de neige",
+    "slight_rain_showers": "Légères averses",
+    "moderate_rain_showers": "Averses modérées",
+    "violent_rain_showers": "Averses violentes",
+    "slight_snow_showers": "Légères averses de neige",
+    "heavy_snow_showers": "Averses de neige fortes",
+    "thunderstorm": "Orage",
+    "thunderstorm_with_slight_hail": "Orage avec légères chutes de grêle",
+    "thunderstorm_with_heavy_hail": "Orage avec fortes chutes de grêle",
+    "unknown": "Inconnue",
+
+    "language": "Langue",
+    "navigator_language": "Langue du navigateur",
     "install_app": "Installer l'appli",
-    "eg": "e.g.",
     "about": "À propos",
     "about_text": [
         "Que faire ce soir ? Où sortir ce week-end ? Quels événements sont organisés près de chez moi ?",
