front: séparation des emojis des categories + variable globale $api + nettoyage des évents des inputs

--- a/front/public/langs/fr.json
+++ b/front/public/langs/fr.json
@@ -10,42 +10,42 @@
     "tomorrow": "Demain",
     "next": " prochain",
     "thedate": "Le ",
-    "party": "🎉 Fête",
-    "arts": "🎨 Arts",
-    "theater": "🎭 Théâtre",
-    "music": "🎶 Musique",
-    "online": "💻 En ligne",
-    "children": "👧‍👦 Pour les enfants",
-    "shopping": "🛍 Shopping",
-    "cinema": "🎬 Cinéma",
-    "food": "🍽 Manger",
-    "wellbeing": "😌 Bien-être",
-    "show": "🎟 Spectacle",
-    "sport": "🎾 Sport",
-    "literature": "📚 Littérature",
-    "drink": "🍹 Boisson",
-    "gardening": "🌱 Jardinage",
-    "cause": "🎗 Cause",
-    "craft": "📐 Artisanat",
-    "exhibition": "🖼 Exposition",
-    "dance": "💃 Danse",
-    "festival": "🎪 Festival",
-    "market": "🛒 Marché",
-    "museum": "🏛 Musée",
-    "outdoor": "🏞 Extérieur",
-    "tour": "🚶‍♀️ Visite",
-    "workshop": "🛠 Atelier",
-    "garden": "🌳 Jardin",
-    "holiday": "🏖 Vacances",
-    "free": "🆓 Gratuit",
-    "parade": "🎇 Parade",
-    "fair": "🎡 Foire",
-    "religion": "🙏 Religion",
-    "science": "🔬 Science",
-    "fashion": "👗 Mode",
-    "seminar": "💼 Séminaire",
-    "videogame": "🎮 Jeu vidéo",
-    "boardgame": "🎲 Jeu de société",
+    "party": "Fête",
+    "arts": "Arts",
+    "theater": "Théâtre",
+    "music": "Musique",
+    "online": "En ligne",
+    "children": "Pour les enfants",
+    "shopping": "Shopping",
+    "cinema": "Cinéma",
+    "food": "Manger",
+    "wellbeing": "Bien-être",
+    "show": "Spectacle",
+    "sport": "Sport",
+    "literature": "Littérature",
+    "drink": "Boisson",
+    "gardening": "Jardinage",
+    "cause": "Cause",
+    "craft": "Artisanat",
+    "exhibition": "Exposition",
+    "dance": "Danse",
+    "festival": "Festival",
+    "market": "Marché",
+    "museum": "Musée",
+    "outdoor": "Extérieur",
+    "tour": "Visite",
+    "workshop": "Atelier",
+    "garden": "Jardin",
+    "holiday": "Vacances",
+    "free": "Gratuit",
+    "parade": "Parade",
+    "fair": "Foire",
+    "religion": "Religion",
+    "science": "Science",
+    "fashion": "Mode",
+    "seminar": "Séminaire",
+    "videogame": "Jeu vidéo",
+    "boardgame": "Jeu de société",
     "copied": "Copié !",
     "organizeit": "Organise-le !",
     "noresults": "Tu ne trouves pas l'évent de tes rêves ?",
