--- a/front/public/langs/en.json
+++ b/front/public/langs/en.json
@@ -10,42 +10,42 @@
     "tomorrow": "Tomorrow",
     "next": " next",
     "thedate": "The ",
-    "party": "🎉 Party",
-    "arts": "🎨 Arts",
-    "theater": "🎭 Theater",
-    "music": "🎶 Music",
-    "online": "💻 Online",
-    "children": "👧‍👦 For children",
-    "shopping": "🛍 Shopping",
-    "cinema": "🎬 Cinema",
-    "food": "🍽 Food",
-    "wellbeing": "😌 Well-being",
-    "show": "🎟 Show",
-    "sport": "🎾 Sport",
-    "literature": "📚 Literature",
-    "drink": "🍹 Drink",
-    "gardening": "🌱 Gardening",
-    "cause": "🎗 Cause",
-    "craft": "📐 Craft",
-    "exhibition": "🖼 Exhibition",
-    "dance": "💃 Dance",
-    "festival": "🎪 Festival",
-    "market": "🛒 Market",
-    "museum": "🏛 Museum",
-    "outdoor": "🏞 Outdoor",
-    "tour": "🚶‍♀️ Tour",
-    "workshop": "🛠 Workshop",
-    "garden": "🌳 Garden",
-    "holiday": "🏖 Holiday",
-    "free": "🆓 Free",
-    "parade": "🎇 Parade",
-    "fair": "🎡 Fair",
-    "religion": "🙏 Religion",
-    "science": "🔬 Science",
-    "fashion": "👗 Fashion",
-    "seminar": "💼 Seminar",
-    "videogame": "🎮 Video game",
-    "boardgame": "🎲 Board game",
+    "party": "Party",
+    "arts": "Arts",
+    "theater": "Theater",
+    "music": "Music",
+    "online": "Online",
+    "children": "For children",
+    "shopping": "Shopping",
+    "cinema": "Cinema",
+    "food": "Food",
+    "wellbeing": "Well-being",
+    "show": "Show",
+    "sport": "Sport",
+    "literature": "Literature",
+    "drink": "Drink",
+    "gardening": "Gardening",
+    "cause": "Cause",
+    "craft": "Craft",
+    "exhibition": "Exhibition",
+    "dance": "Dance",
+    "festival": "Festival",
+    "market": "Market",
+    "museum": "Museum",
+    "outdoor": "Outdoor",
+    "tour": "Tour",
+    "workshop": "Workshop",
+    "garden": "Garden",
+    "holiday": "Holiday",
+    "free": "Free",
+    "parade": "Parade",
+    "fair": "Fair",
+    "religion": "Religion",
+    "science": "Science",
+    "fashion": "Fashion",
+    "seminar": "Seminar",
+    "videogame": "Video game",
+    "boardgame": "Board game",
     "copied": "Copied!",
     "organizeit": "Organize it!",
     "noresults": "You don't find the event of your dreams?",
