api+front: fix date et timezone + ajout du filtre hasimage pour les évents

--- a/front/public/langs/en.json
+++ b/front/public/langs/en.json
@@ -11,7 +11,7 @@
     "home": "Home",
     "popular": "Popular",
     "relevant": "Relevant",
-    "soon": "Soon",
+    "starting_soon": "Starting soon",
     "nearby": "Nearby",
     "view_more": "View more",
 
