--- a/front/public/langs/fr.json
+++ b/front/public/langs/fr.json
@@ -11,7 +11,7 @@
     "home": "Accueil",
     "popular": "Populaires",
     "relevant": "Pertinents",
-    "soon": "Bientôt",
+    "starting_soon": "Commençant bientôt",
     "nearby": "À proximité",
     "view_more": "Voir plus",
 
