front: i18n de la signature fantaisiste

--- a/front/public/langs/en.json
+++ b/front/public/langs/en.json
@@ -120,6 +120,7 @@
     "contact": "Contact",
     "registration": "Registration",
     "non_representative": "Non representative image",
+    "whimsical_signoff": "It looks rather delightful, doesn’t it? 🧁",
 
     "weather": "Weather",
     "clear_sky": "Clear sky",
