--- a/front/public/langs/fr.json
+++ b/front/public/langs/fr.json
@@ -120,6 +120,7 @@
     "contact": "Contact",
     "registration": "Inscription",
     "non_representative": "Image non représentative",
+    "whimsical_signoff": "Ça a l'air chouette, non ?! 🦉",
 
     "weather": "Météo",
     "clear_sky": "Ciel clair",
