front+back: les dates sont maintenant tous des ISO 8601

--- a/front/public/langs/en.json
+++ b/front/public/langs/en.json
@@ -103,8 +103,12 @@
     "today": "Today",
     "tomorrow": "Tomorrow",
     "next": " next",
-    "the_date": "The ",
-    "at": "at",
+    "the_date": "{0}",
+    "date_at_time": "{0} at {1}",
+    "between": "Between {0} and {1}",
+    "before": "Before {0}",
+    "after": "After {0}",
+    "no_matter": "No matter",
     "from": "from",
     "to": "to",
     "status": [
