--- a/front/public/langs/fr.json
+++ b/front/public/langs/fr.json
@@ -103,8 +103,12 @@
     "today": "Aujourd'hui",
     "tomorrow": "Demain",
     "next": " prochain",
-    "the_date": "Le ",
-    "at": "à",
+    "the_date": "Le {0}",
+    "date_at_time": "{0} à {1}",
+    "between": "Entre {0} et {1}",
+    "before": "Avant {0}",
+    "after": "Après {0}",
+    "no_matter": "Peu importe",
     "from": "de",
     "to": "à",
     "status": [
